Fixed duplicate content on iOS browsers

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -60,7 +60,7 @@
 
     &--desktop {
       @include breakpoint(medium) {
-        display: none;
+        display: none !important;
       }
     }
 
